objects/FSL__Service_Goal__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Ignore_Home_Base_Coordinates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sets the scheduling to include or exclude from minimize travel considerations the first and last travel of the day, to and from the service resource home base</inlineHelpText>
        <label>Exclude Home Base Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Object_Group_Field__c</fullName>
        <label>Object_Group_Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Prioritize_Resource__c</fullName>
        <label>Prioritize Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Least Qualified</fullName>
                    <default>true</default>
                    <label>Least Qualified</label>
                </value>
                <value>
                    <fullName>Most Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Resource_Group_Field__c</fullName>
        <label>Resource_Group_Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Priority_Field__c</fullName>
        <label>Resource Priority Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Objective</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Objectives</pluralLabel>
    <recordTypes>
        <fullName>FSL__Objective_Asap</fullName>
        <active>true</active>
        <description>Schedule as soon as possible</description>
        <label>ASAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Minimize_Overtime</fullName>
        <active>true</active>
        <description>Minimize the use of overtime</description>
        <label>Minimize Overtime</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Minimize_Travel</fullName>
        <active>true</active>
        <description>Minimize travel time</description>
        <label>Minimize Travel</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_PreferredEngineer</fullName>
        <active>true</active>
        <description>Prioritize scheduling according to preferred resource</description>
        <label>Preferred Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Resource_Priority</fullName>
        <active>true</active>
        <description>Prefer a resource based on a field value on the resource</description>
        <label>Resource Priority</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Skill_Level</fullName>
        <active>true</active>
        <description>Prefer the least/most qualified candidate</description>
        <label>Skill Level</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>